--- a/themes/alpha-dust/languages/zh-CN.yml
+++ b/themes/alpha-dust/languages/zh-CN.yml
@@ -3,3 +3,9 @@ next: 下一页
 comment: 留言
 archive_a: 归档
 archive_b: 归档：%s
+about: 关于
+recent_posts: "最近发布"
+categories: "分类"
+default_post_title: "名儿都没起"
+category: 种类
+tag: 标签
