--- a/source/_posts/jsFullStackSeries/02.md
+++ b/source/_posts/jsFullStackSeries/02.md
@@ -1,7 +1,7 @@
 ---
 title: javascript全栈应用实践之路 (服务器搭建篇 一)
 date: 2016-09-27 18:26:00
-tags: javascript 全栈 服务器搭建
+tags: javascript 全栈
 ---
 
 #### 软件环境
