--- a/source/_posts/jsFullStackSeries/03.md
+++ b/source/_posts/jsFullStackSeries/03.md
@@ -1,7 +1,7 @@
 ---
 title: javascript全栈应用实践之路 (服务器搭建篇 二)
 date: 2016-09-27 18:29:00
-tags: javascript 全栈 服务器搭建
+tags: javascript 全栈
 ---
 
 ####  剧情概要
