--- a/source/_posts/奇技淫巧.md
+++ b/source/_posts/奇技淫巧.md
@@ -81,3 +81,13 @@ tags: javascript
     function(arrOrValue){
         let _arr= [].concat(arr || [])
     }
+
+### 不动点组合子(只适合拿来装逼)
+
+    // 用于将递归匿名函数
+    let Y = f => (x => f(y => x(x)(y)))(x => f(y => x(x)(y)))
+    let steamrollArray = a => Y(fl => i => i instanceof Array ? i.reduce((p, n) => p.concat(fl(n)), []) : i)(a)
+
+通常我们可以将需要递归求值的函数存做一个变量,然后在其内部调用其本身.
+但是装逼的时候,可以采用Y-combinator(fixed-point combinator)的方式去实现匿名函数递归.
+参考[Fixed-point combinator](https://en.wikipedia.org/wiki/Fixed-point_combinator)
