调整首页内容

--- a/source/_posts/jsFullStackSeries/01.md
+++ b/source/_posts/jsFullStackSeries/01.md
@@ -21,6 +21,8 @@ tags: javascript 全栈
 3.由于本人能力有限,文中出现过激或者错误的观点,烦请读者们悉数指出  
 4.文中并没有什么晦涩难懂或者炫目耀眼的黑魔法,所以注释不会出现得太频繁,请放心食用
 
+<!--more-->
+
 ![天真笑容.jpg](http://upload-images.jianshu.io/upload_images/140939-3fb45a7ef23cb680.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 #### 简介
