--- a/source/_posts/jsFullStackSeries/03.md
+++ b/source/_posts/jsFullStackSeries/03.md
@@ -22,6 +22,8 @@ tags: javascript 全栈
 
 好,带着这个独创的结论,我们就开始实现一个authentication吧!
 
+<!--more-->
+
 #### 先实现简单的路由和filter
 让我们找到并打开server/routes/Initialize.js,做一些小小的改动,添加两个路由,对应的就是我们未来的登录和注册功能
 ```
