--- a/source/_posts/奇技淫巧.md
+++ b/source/_posts/奇技淫巧.md
@@ -17,6 +17,8 @@ tags: javascript
         }
     })(i)()]
 
+<!--more-->
+
 ### 求反运算配合indexOf的运用
 
     Array.prototype.has = String.prototype.has = function(sth){
