--- a/source/_posts/踩过的坑.md
+++ b/source/_posts/踩过的坑.md
@@ -18,6 +18,8 @@ tags: 踩坑
  - XMLHttpRequest的`setRequestHeader`要在`open`后进行
  - 在跨域的POST请求,需要携带cookie身份信息时,XMLHttpRequest的`withCredentials`要在`open`后,设置为`true`(对应的,服务器要有`Access-Control-Allow-Credentials: true`的responseHeader)
 
+<!--more-->
+
 ### IOS 微信X5
 
  - 不支持canvas.resetTransform()
