webpack+postcss/autoprefixer/postcss-scss

--- a/source/_posts/工具使用.md
+++ b/source/_posts/工具使用.md
@@ -127,3 +127,39 @@ tags: 工具
             v.pipe(htmlFilter)
                 .pipe(gulp.dest('./'));
         }
+
+### 使用postcss/autoprefixer/postcss-scss 
+
+> 需要安装 `npm i postcss postcss-loader autoprefixer postcss-scss` ,切记一定要装 `postcss`
+
+- webpack.config.js中添加配置
+
+```
+module:{
+    loaders: [
+        {
+            test: /\.scss$/,
+            loader: 'style!css?importLoaders=1!postcss!sass'    // 先sass-loader将scss文件编译成css 再做后续的处理，所以顺序不能变
+        }
+    ]
+},
+postcss: [autoprefixer({    
+    // 需要支持的浏览器或者平台的配置
+    browsers: [
+        "android 4",
+        "iOS 6",
+        "last 2 versions"
+    ]
+})],
+```
+
+- package.json中添加配置（也可以选择postcss.config.js等形式配置)
+
+```
+"postcss": {
+    "plugins": {
+        "parser": "postcss-scss", 
+        "autoprefixer": true
+    }
+}
+```
