--- a/source/_posts/奇技淫巧.md
+++ b/source/_posts/奇技淫巧.md
@@ -84,12 +84,11 @@ tags: javascript
         let _arr= [].concat(arr || [])
     }
 
-### 不动点组合子(只适合拿来装逼)
+### 不动点组合子
 
     // 用于将递归匿名函数
     let Y = f => (x => f(y => x(x)(y)))(x => f(y => x(x)(y)))
     let steamrollArray = a => Y(fl => i => i instanceof Array ? i.reduce((p, n) => p.concat(fl(n)), []) : i)(a)
 
-通常我们可以将需要递归求值的函数存做一个变量,然后在其内部调用其本身.
-但是装逼的时候,可以采用Y-combinator(fixed-point combinator)的方式去实现匿名函数递归.
-参考[Fixed-point combinator](https://en.wikipedia.org/wiki/Fixed-point_combinator)
+采用Y-combinator(fixed-point combinator)的方式去实现匿名函数递归.
+参考[不动点组合子](https://zh.wikipedia.org/wiki/%E4%B8%8D%E5%8A%A8%E7%82%B9%E7%BB%84%E5%90%88%E5%AD%90)
