--- a/source/_posts/工具使用.md
+++ b/source/_posts/工具使用.md
@@ -17,6 +17,23 @@ tags: 工具
 
     修改git设置 `git config --system core.longpaths true`
 
+### 解决 git review 时 no matching key exchange method found. Their offer: diffie-hellman-group1-sha1 的错误
+
+该错误是由于服务器ssh验证使用了一个过时的算法导致的,但是为了能够成功通过,需要在bash每次打开时设置一下 [stackoverflow solution](http://stackoverflow.com/questions/38770202/using-kexalgorithms-diffie-hellman-group1-sha1-did-not-resolve-no-matching-ke)
+
+```bash
+export GIT_SSH_COMMAND='ssh -o KexAlgorithms=+diffie-hellman-group1-sha1'
+```
+
+stackoverflow上有热心人说可以在 git config 中做配置,但是我试了,并没有什么用,不过还是记录一下
+
+```bash
+
+git config --global core.sshCommand "ssh -o KexAlgorithms=+diffie-hellman-group1-sha1"
+git config --global core.scpCommand "scp -o KexAlgorithms=+diffie-hellman-group1-sha1"
+
+```
+
 <!--more-->
 
 # VS CODE
