add some content

--- a/source/_posts/踩过的坑.md
+++ b/source/_posts/踩过的坑.md
@@ -118,3 +118,25 @@ tags: 踩坑
 	- socket.io 出现引用错误,初步估计是因为socket.io和react-native都是用webpack打包,所以查找引用目录出现了问题,
 	于是将socket.io.js(打包后的文件)作为一个单独模块添加到项目里,
 	然后报了一些navigator的错误(因为根据浏览器的userAgent判断环境),无脑的去掉这些地方就能用了
+
+# NGINX
+
+	nginx 在代理同一个服务器上的多个 nodejs 实例时，当 nodejs 中有使用了 socket.io ，就会出现不断 connect 的问题，这是因为 nginx 在代理时没有把套接字链接视作一个长链接导致的，配置 upsteam 的 keepalive 之后便可以解决该问题。
+
+```json
+
+		upstream upstream_host {
+			server 127.0.0.1:8090;
+			keepalive 64;
+		}
+
+		location ^~ /socket {
+				proxy_pass https://upstream_host;
+				proxy_redirect off;
+				proxy_pass_request_headers on;
+				proxy_http_version 1.1;
+				proxy_set_header Upgrade $http_upgrade;
+				proxy_set_header Connection "upgrade";
+		}
+
+```
