--- a/source/_posts/踩过的坑.md
+++ b/source/_posts/踩过的坑.md
@@ -119,6 +119,22 @@ tags: 踩坑
 	于是将socket.io.js(打包后的文件)作为一个单独模块添加到项目里,
 	然后报了一些navigator的错误(因为根据浏览器的userAgent判断环境),无脑的去掉这些地方就能用了
 
+### ios 环境下添加 react-native-vector-icons 引用
+
+  - XCode 中添加 RNVectorIcons.xcodeproj 到 Libraries
+	- Build Phases 中添加 libRNVectorIcons 到 Link Binary With Libraries
+	- Build Phases 中添加 FontAwesome.ttf 到 CopyBundleResources
+	- Info.plist 中添加 Fonts provided by application
+		- 第一栏添加 FontAwesome.ttf
+
+	然后运行报错 watchman EMFILE
+
+	使用 brew 重新安装 watchman 然后 删除 node_modules 使用 npm（注意不是yarn）install
+
+	重新打包即可
+
+	还有一种方法没有试过，执行命令：`ulimit 4096 # for instance`
+
 # NGINX
 
 	nginx 在代理同一个服务器上的多个 nodejs 实例时，当 nodejs 中有使用了 socket.io ，就会出现不断 connect 的问题，这是因为 nginx 在代理时没有把套接字链接视作一个长链接导致的，配置 upsteam 的 keepalive 之后便可以解决该问题。
