--- a/source/_posts/踩过的坑.md
+++ b/source/_posts/踩过的坑.md
@@ -7,13 +7,13 @@ tags: 踩坑
 
 # 浏览器
 
-### IE 系列
+## IE 系列
 
  - IE11在跨站引用的样式文件中的url(比如字体文件路径)解析时,会将document文档的域作为当前域,而不是该样式文件的域.
  - 在IE8中使用respond.js去使之支持css3媒体查询的时候,值得注意的是**respond默认不会加载跨域样式资源**,
  - 在IE8中实现数据可视化,千万不要用基于canvas绘图的插件+excanvas,这是自寻死路.还是找找svg+vml绘图的插件吧,比如highcharts之类的.效率问题.
 
-### Ajax/CORS
+## Ajax/CORS
 
  - XMLHttpRequest的`setRequestHeader`要在`open`后进行
  - 在跨域的POST请求,需要携带cookie身份信息时,XMLHttpRequest的`withCredentials`要在`open`后,设置为`true`(对应的,服务器要有`Access-Control-Allow-Credentials: true`的responseHeader)
@@ -22,19 +22,19 @@ tags: 踩坑
 
 <!--more-->
 
-### IOS 微信X5
+## IOS 微信X5
 
  - 不支持canvas.resetTransform()
  - 不支持Array.fill
  - 不支持Array.findIndex 
 
-### Android 微信X5
+## Android 微信X5
 
  - 不支持字符串模板
 
 # NODEJS
 
-### MSBuild Error MSB4132 错误 
+## MSBuild Error MSB4132 错误 
 
 该错误是由于node-gyp默认使用2.0版本的msbuild,可能和当前机器上的msbuild版本不一致导致的.
 
@@ -48,7 +48,7 @@ tags: 踩坑
 	- 或者在npm的 rebuild|install 某些需要编译的包时加上msvs_version的指定设置 `npm install <module> --msvs_version=xxxx`
 - 重装node-gyp
 
-### MSBuild Error MSB4019 错误
+## MSBuild Error MSB4019 错误
 
 这个错误是由于node-gyp在build一些项目,没有找到系统配置的microsoft.cpp.default.props文件位置导致的
 
@@ -59,7 +59,7 @@ tags: 踩坑
 - 重新 `npm rebuild node-sass`
 
 <strike>
-### MSBuild Error MSB3428 错误
+## MSBuild Error MSB3428 错误
 
 该错误是由于系统默认路径下没有找到VCBuild.exe可执行文件导致的，依然是某些类库在当前系统打包的时候出现的问题
 
@@ -68,7 +68,7 @@ tags: 踩坑
 - 确认安装之后,在系统环境变量中为当前用户(或者所有用户，自行斟酌)的PATH配置中添加VCBuild.exe的绝对路径
 </strike>
 
-### Babel-Gulp使用[Symbol.iterator]时编译出现错误 
+## Babel-Gulp使用[Symbol.iterator]时编译出现错误 
 
 > npm install babel-plugin-transform-runtime
 
@@ -103,7 +103,7 @@ tags: 踩坑
 
 # ELM
 
-### windows环境下 elm-package install/elm-make 出现错误permission denied
+## windows环境下 elm-package install/elm-make 出现错误permission denied
 
 	elm-make: elm-lang-core-5204441: MoveFileEx "elm-lang-core-5204441" "2.1.0": permission denied (Access is denied.)
 
@@ -113,13 +113,13 @@ tags: 踩坑
 
 # REACT-NATIVE
 
-### windows环境下 android开发 
+## windows环境下 android开发 
 
 	- socket.io 出现引用错误,初步估计是因为socket.io和react-native都是用webpack打包,所以查找引用目录出现了问题,
 	于是将socket.io.js(打包后的文件)作为一个单独模块添加到项目里,
 	然后报了一些navigator的错误(因为根据浏览器的userAgent判断环境),无脑的去掉这些地方就能用了
 
-### ios 环境下添加 react-native-vector-icons 引用
+## ios 环境下添加 react-native-vector-icons 引用
 
   - XCode 中添加 RNVectorIcons.xcodeproj 到 Libraries
 	- Build Phases 中添加 libRNVectorIcons 到 Link Binary With Libraries
@@ -155,4 +155,14 @@ tags: 踩坑
 				proxy_set_header Connection "upgrade";
 		}
 
+```
+
+# DEBIAN
+
+使用 puppeteer 时会报依赖错误，普通用户只需要安装依赖即可解决
+
+```
+sudo apt-get update
+
+sudo apt-get install gconf-service libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget --fix-missing
 ```
