update and format

--- a/source/_draft/jsFullStackSeries/02.md
+++ b/source/_draft/jsFullStackSeries/02.md
@@ -4,11 +4,11 @@ date: 2016-09-27 18:26:00
 tags: javascript 全栈
 ---
 
-#### 软件环境
+# 软件环境
 
-首先,需要安装一些必要的软件 
+首先,需要安装一些必要的软件
 
-- [nodejs(建议最新的6+) ](https://nodejs.org/zh-cn/)
+- [nodejs(建议最新的6+)](https://nodejs.org/zh-cn/)
 - [mongodb](https://www.mongodb.com/download-center#community)
 - [redis(windows)](https://github.com/ServiceStack/redis-windows)
 
@@ -27,7 +27,7 @@ tags: javascript 全栈
 
 <!--more-->
 
-#### 来吧,Server!
+# 来吧,Server!
 
  创建一个空的文件夹 MyServer
 `cd myserver & npm init` 
