--- a/source/_posts/奇技淫巧.md
+++ b/source/_posts/奇技淫巧.md
@@ -4,7 +4,7 @@ date: 2016-9-28 12:26:03
 tags: javascript 
 ---
 
-### generator 生成i内的 fibonacci数组
+# generator 生成i内的 fibonacci数组
 
     let i = 1000;
     [...(function(limit){ 
@@ -19,7 +19,7 @@ tags: javascript
 
 <!--more-->
 
-### 不需要中间变量,交换两个值类型变量的值得装逼进阶
+# 不需要中间变量,交换两个值类型变量的值得装逼进阶
 
     let [a,b]=[1,2]
     // 普通青年
@@ -58,11 +58,12 @@ tags: javascript
 `a=1^1` // a=1,b=1
 `a=0` // a被赋值为0,b=1  
 
-### 不动点组合子
+# 不动点组合子
 
-    // 用于将递归匿名函数
+    // 将其用于将递归匿名函数
     let Y = f => (x => f(y => x(x)(y)))(x => f(y => x(x)(y)))
     let steamrollArray = a => Y(fl => i => i instanceof Array ? i.reduce((p, n) => p.concat(fl(n)), []) : i)(a)
+    steamrollArray([1,[2,3],[[[4]],[5]]]) // 结果是 [1,2,3,4,5]
 
-采用Y-combinator(fixed-point combinator)的方式去实现匿名函数递归.
-参考[不动点组合子](https://zh.wikipedia.org/wiki/%E4%B8%8D%E5%8A%A8%E7%82%B9%E7%BB%84%E5%90%88%E5%AD%90)
+采用 Y-combinator(fixed-point combinator) 的方式去实现匿名函数递归.
+参考 [不动点组合子](https://zh.wikipedia.org/wiki/%E4%B8%8D%E5%8A%A8%E7%82%B9%E7%BB%84%E5%90%88%E5%AD%90)
