--- a/source/_posts/好玩的社区.md
+++ b/source/_posts/好玩的社区.md
@@ -4,42 +4,50 @@ date: 2016-10-01 14:52:16
 tags: 技术 社区
 ---
 
-> 以下是个人搜罗的一些比较喜欢的社区,比起传统的csdn和open-open那种技术性论坛和博客,这里给我的感觉更像是家.哈哈哈.
+> 以下是个人搜罗的一些比较喜欢的社区,比起传统的 csdn 和 open-open 那种技术性论坛和博客,这里给我的感觉更像是家.
 
 <!--more-->
-### [知乎](http://www.zhihu.com)
 
-不用多说,这应该是当前国内互联网社区的当家花旦.
+- [知乎](http://www.zhihu.com)
 
-### [简书](http://www.jianshu.com)
+  不用多说,这应该是当前国内互联网社区的当家花旦.
+
+- [简书](http://www.jianshu.com)
 
 一开始是一个格外有情调的小资社区,经常有些暖心的小鸡汤啊什么的.后来,进驻了一波程序员,现在成了小知乎.
 
-### [SegmentFault](http://www.segmentfault.com)
+- [SegmentFault](http://www.segmentfault.com)
 
 相比stackoverflow,专业性稍微差一些,社交成分多一些的程序员问答社区,比较活跃.
 
-### [PingWest品玩](http://www.pingwest.com)
+- [PingWest品玩](http://www.pingwest.com)
 
 狂拽酷炫吊炸天的行业动向信息社区,经常有些让人亮瞎眼睛的新闻.
 
-### [那么(原孢子)](http://www.named.cn)
+- [那么(原孢子)](http://www.named.cn)
 
 从前有一个设计师社区,后来...没有了...(好失落)
 
-### [LOFTER乐乎](http://www.lofter.com)
+- [LOFTER乐乎](http://www.lofter.com)
 
 每个人的理想国,摄影师的天堂,话说我还在上面订购了一些明信片呢.感觉perfect!
 
-### [V2EX](http://www.v2ex.com)
+- [V2EX](http://www.v2ex.com)
 
 简洁明快的技术社区,虽然感觉从内容质量上来讲也在走下坡路,但我个人对其评价还是很高的.
 
-### [众成翻译](http://www.zcfy.cc/)
+- [众成翻译](http://www.zcfy.cc/)
 
 打着翻译的旗号的前沿技术社区.
 
-### [云栖社区](https://yq.aliyun.com/)
+- [云栖社区](https://yq.aliyun.com/)
 
 阿里爸爸的技术社区.
 
+- [腾讯 AlloyTeam](http://alloyteam.github.io/)
+
+腾讯 AlloyTeam 团队博客.
+
+- [JS Tips](http://www.jstips.co/)
+
+One tip per day.
