--- a/source/_posts/工具使用.md
+++ b/source/_posts/工具使用.md
@@ -6,18 +6,18 @@ tags: 工具
 
 # Git
 
-### 生成ssh
+## 生成ssh
 
     - 配置全局设置 `git config --global user.name "username"` `git confgi --global user.email "example@xxx.com"`
     - 生成ssh `ssh-keygen -t rsa -C "example@xxx.com"` 会在C:\User\xxx目录下生成.ssh目录
     - 将生成的.ssh目录中的id_rsa.pub的内容添加到gitlab/github的个人账户的ssh-key
     - 验证 ssh 是否添加成功 `ssh git@github.com`
 
-### 解决git clone时文件目录过长的方法
+## 解决git clone时文件目录过长的方法
 
     修改git设置 `git config --system core.longpaths true`
 
-### 解决 git review 时 no matching key exchange method found. Their offer: diffie-hellman-group1-sha1 的错误
+## 解决 git review 时 no matching key exchange method found. Their offer: diffie-hellman-group1-sha1 的错误
 
 该错误是由于服务器ssh验证使用了一个过时的算法导致的,但是为了能够成功通过,需要在bash每次打开时设置一下 [stackoverflow solution](http://stackoverflow.com/questions/38770202/using-kexalgorithms-diffie-hellman-group1-sha1-did-not-resolve-no-matching-ke)
 
@@ -38,7 +38,7 @@ git config --global core.scpCommand "scp -o KexAlgorithms=+diffie-hellman-group1
 
 # VS CODE
 
-### 配置代码段
+## 配置代码段
 
 - `ctrl + p` 打开quick open
 - 输入 `>snippets` 回车
@@ -59,7 +59,7 @@ git config --global core.scpCommand "scp -o KexAlgorithms=+diffie-hellman-group1
 
 # GULP/WEBPACK
 
-### 多入口打包ES6模块化文件
+## 多入口打包ES6模块化文件
 
         var gulp = require('gulp')
         var webpack = require('webpack-stream')
@@ -94,7 +94,7 @@ git config --global core.scpCommand "scp -o KexAlgorithms=+diffie-hellman-group1
                 }))
         })
 
-### gulp-rev-all,gulp-filter 生成文件hash值 并替换对其的引用
+## gulp-rev-all,gulp-filter 生成文件hash值 并替换对其的引用
 
         var gulp = require('gulp')
         var sass = require('gulp-sass')
@@ -145,13 +145,13 @@ git config --global core.scpCommand "scp -o KexAlgorithms=+diffie-hellman-group1
                 .pipe(gulp.dest('./'));
         }
 
-### 使用postcss/autoprefixer/postcss-scss 
+## 使用postcss/autoprefixer/postcss-scss
 
 > 需要安装 `npm i postcss postcss-loader autoprefixer postcss-scss` ,切记一定要装 `postcss`
 
 - webpack.config.js中添加配置
 
-```
+```javascript
 module:{
     loaders: [
         {
@@ -160,7 +160,7 @@ module:{
         }
     ]
 },
-postcss: [autoprefixer({    
+postcss: [autoprefixer({
     // 需要支持的浏览器或者平台的配置
     browsers: [
         "android 4",
@@ -172,10 +172,10 @@ postcss: [autoprefixer({
 
 - package.json中添加配置（也可以选择postcss.config.js等形式配置)
 
-```
+```javascript
 "postcss": {
     "plugins": {
-        "parser": "postcss-scss", 
+        "parser": "postcss-scss",
         "autoprefixer": true
     }
 }
