--- a/source/_posts/常用指令.md
+++ b/source/_posts/常用指令.md
@@ -4,16 +4,160 @@ date: 2018-3-15 12:42:06
 tags: shell 指令
 ---
 
-# MAC
+# 通用指令
 
-## 查找端口占用并关闭进程
+- 查看占用端口
+  - sudo lsof -i :PORT 显示指定端口的占用进程
+  - ps -ef | grep "xxx"  查看指定名称的进程
+  - sudo kill -9 PID 结束指定进程
+- 查看磁盘占用
+  - df -h 查看根目录的挂载盘占用情况
+  - du -h -d 1 PATH 查看指定目录的磁盘情况
+- 查找文件
+  - find / -name "xxx"
+- crontab 修改默认编辑器
+  - select-editor
+- 给用户添加目录权限
+  - chown user:user DIR
+    - chmod 760 DIR
+- 给用户添加 sudo 权限
+  - vim /etc/sudoers 然后添加权限记录
 
-`sudo lsof -i :PORT` 显示指定端口的占用进程
+# scp
 
-`sudo kill -9 PID` 结束指定进程
+- 远程下载文件到本地  scp -P 端口 username@servername:/remote_path/filename ~/local_destination
+- 上传本地文件到远程  scp -P 端口 ~/local_path/local_filename username@servername:/remote_path
 
-## 查看磁盘占用
+# ssh
 
-`df -h` 查看根目录的挂载盘占用情况
+- 生成 rsa签名
+  - ssh-keygen -t rsa -b 4096 -C "your_email@example.com" 
 
-`du -h -d 1 PATH` 查看指定目录的磁盘情况
+- 安全配置
+  - vi /etc/ssh/sshd_config
+  - 禁用密码验证
+    - PasswordAuthentication no
+  - 启用密钥验证
+    - RSAAuthentication yes
+    - PubkeyAuthentication yes
+  - 指定公钥数据库文件
+    - AuthorsizedKeysFile PATH/TO/FILE
+
+- 将远程机器端口8082映射到本地8000
+  - ssh -NfL *:8000:localhost:8082 root@47.52.207.196 -p 65499
+
+# shadowsocks
+
+- 安装
+  - sudo apt-get install python-pip
+  - sudo pip install setuptools
+  - sudo pip install shadowsocks
+
+- 创建配置文件
+  - vim /etc/shadowsocks.conf
+
+{
+  "server": "服务器的IP地址",
+  "server_port": 12306,
+  "local_address": "127.0.0.1",
+  "local_port": 1080,
+  "password": "cybereits",
+  "timeout": 300,
+  "method": "rc4-md5"
+}
+
+- 开启 shadowsocks 服务器
+  - sudo ssserver -c /etc/shadowsocks.conf -d start
+
+- 本地使用 shadowsocks
+  - sudo sslocal -c /etc/shadowsocks.conf -d start
+
+# git
+
+- 添加本地代理
+
+```shell
+git gc --aggressive
+git repack -a -f -d --window=250 --depth=250
+git config --global http.postBuffer 524288000
+git config --global https.postBuffer 524288000
+```
+
+- 添加 shadowsocks 在 1080 端口后
+
+```shell
+git config --global http.proxy socks5://127.0.0.1:1080
+git config --global https.proxy socks5://127.0.0.1:1080
+```
+
+# shell 交互
+
+```shell
+#!/usr/bin/expect -f
+spawn ssh user@my.server.com
+expect "assword:"
+send "mypassword\r"
+interact
+```
+
+# mysql 定时备份
+
+```shell
+#!/bin/bash
+
+folder=~/backup/mysql
+time=`date +%Y%m%d%H`
+filename=backup
+host=localhost
+user=root
+password=123
+db=cybereits
+
+mysqldump -h$host -u$user -p$password $db|gzip>$folder/$filename.$time.sql.gz
+
+find $folder -name "$filename_*.sql.gz" -type f -mtime +5 -exec rm {} \; > /dev/null 2>&1
+```
+
+说明：
+
+代码中 time=\` date +%Y%m%d%H \` 也可以写为 time="$(date +"%Y%m%d$H")"
+
+db：数据库名；
+user：数据库用户名；
+password：用户密码；
+filename：自定义备份文件前缀标识。
+-type f 表示查找普通类型的文件，f表示普通文件。
+-mtime +5 按照文件的更改时间来查找文件，+5表示文件更改时间距现在5天以前；如果是 -mmin +5 表示文件更改时间距现在5分钟以前。
+-exec rm {} \; 表示执行一段shell命令，exec选项后面跟随着所要执行的命令或脚本，然后是一对儿{ }，一个空格和一个\，最后是一个分号。
+/dev/null 2>&1 把标准出错重定向到标准输出，然后扔到/DEV/NULL下面去。通俗的说，就是把所有标准输出和标准出错都扔到垃圾桶里面；其中的& 表示让该命令在后台执行。
+
+为脚本添加执行权限 `chmod +x /usr/sbin/bakmysql.sh`
+
+检查有没安装crond,如果没有，先安装 `yum -y install vixie-cron yum -y install crontabs`
+
+`vi /etc/crontab`
+
+在最后一行中加入 `00 3 * * * root /usr/sbin/bakmysql.sh` 表示每天3点00分执行备份
+
+重启crontab `/etc/rc.d/init.d/crond restart` 或者 `service crond restart`
+
+恢复数据备份文件：
+
+非压缩备份文件恢复：`mysql -u root -p dataname < name2008010103.sql`
+
+从压缩文件直接恢复：`gzip < name2008010103.sql.gz | mysql -u root -p dataname` 或：`zcat name2008010103.sql.gz | mysql -u root -p`
+
+# geth 命令行使用说明
+
+调用其它合约的方法
+
+```javascript
+// ABI_OBJECT 合约 ABI
+// DEPLOY_ADDR 合约部署地址
+// 两者都可以在 etherscan 查询到
+var contract = eth.contract(ABI_OBJECT).at(DEPLOY_ADDR)
+// 解锁转出钱包（转账才需要 查询不需要）
+web3.personal.unlockAccount("转出钱包地址","钱包密钥",300)  // 解锁 300 秒
+// 调用 ERC-20 标准的 transfer 方法
+contract.transfer.sendTransaction("收款地址","代币数量 * 合约 decimal", { from: "转出钱包地址" })
+```
