--- a/source/_posts/常用指令.md
+++ b/source/_posts/常用指令.md
@@ -23,6 +23,8 @@ tags: shell 指令
 - 给用户添加 sudo 权限
   - vim /etc/sudoers 然后添加权限记录
 
+<!--more-->
+
 # scp
 
 - 远程下载文件到本地  scp -P 端口 username@servername:/remote_path/filename ~/local_destination
