--- a/source/_posts/踩过的坑.md
+++ b/source/_posts/踩过的坑.md
@@ -33,6 +33,12 @@ tags: 踩坑
 
 # NODEJS
 
+## node_amqp 类库心跳默认没有开启
+
+在使用 node_amqp 类库时连接 rabbitMQ 的连接如果没有正确断开则会使 rabbitMQ 服务中的 connection 越来越多，原因就是因为 `heartbeat` 默认值是 `false`，而这个属性没有在默认的配置中出现，而且没有在文档的配置说明中进行阐述，只是在一个非常不显眼的角落里顺带提了一句:
+
+> The heartbeat setting sets the heartbeat interval (in seconds) for the connection. There is no default for this option meaning no heartbeating is taking place.
+
 ## MSBuild Error MSB4132 错误
 
 该错误是由于node-gyp默认使用2.0版本的msbuild,可能和当前机器上的msbuild版本不一致导致的.
