--- a/source/_posts/踩过的坑.md
+++ b/source/_posts/踩过的坑.md
@@ -153,11 +153,10 @@ tags: 踩坑
 
 		location ^~ /socket {
 				proxy_pass https://upstream_host;
-				proxy_redirect off;
-				proxy_pass_request_headers on;
 				proxy_http_version 1.1;
 				proxy_set_header Upgrade $http_upgrade;
 				proxy_set_header Connection "upgrade";
+				proxy_set_header Host $host;
 		}
 
 ```
