--- a/source/_draft/jsFullStackSeries/01.md
+++ b/source/_draft/jsFullStackSeries/01.md
@@ -31,7 +31,7 @@ tags: javascript 全栈
 选型可能部分比较保守,譬如选择了express而不是koa等.
 下面,先大致介绍一下将要涉及的部分类库.
 
-###### nodejs 服务器端
+##### nodejs 服务器端
 
 - express 基础框架
 - connect-redis & express-session 会话组件(会话信息会有持久化 因为开发的时候服务器经常重启 不希望所有的客户端还要重新登录)
@@ -40,17 +40,17 @@ tags: javascript 全栈
 - socket.io 架设套接字通信服务,经典的应用场景:聊天室
 - mongoose mongodb的ODM
 
-###### PC端
+##### PC端
 
 - bootstrap & AdminLTE 样式框架
 - angularjs@1.x web前端MVVM解决方案
 
-###### Android移动端
+##### Android移动端
 
 - react-native 我又不会写原生,既然是js全栈,讲道理嘛
 - socket.io.client 套接字通信的客户端
 
-###### 工程化/开发工具
+##### 工程化/开发工具
 
 - nodemon 服务器守护进程工具
 - eslint 编码质量工具
@@ -58,6 +58,5 @@ tags: javascript 全栈
 - babel 世界正义的卫道士(画风突变)
 - gulp 任务管理
 - webpack web资源打包工具
-
 
 [下一集:服务器搭建](http://www.jianshu.com/p/8616aa298cc5)
