--- a/source/_draft/jsFullStackSeries/03.md
+++ b/source/_draft/jsFullStackSeries/03.md
@@ -4,13 +4,15 @@ date: 2016-09-27 18:29:00
 tags: javascript 全栈
 ---
 
-####  剧情概要
+## 剧情概要
 
 上一集,我们一起完成了一个简单的服务器 -- 提供了/index 根目录的路由,/graphql 数据服务路由并且创建了一个用户模型.
 在这一集,我们将要完成注册登录和身份验证的基本功能,并且完成对应web端的部分.
 
-#### 思考
+## 思考
+
 开始撸码之前,让我们先思考两个问题:
+
 - 身份验证的原理是什么
 - 身份验证应该在作用于什么场景
 
@@ -24,19 +26,25 @@ tags: javascript 全栈
 
 <!--more-->
 
-#### 先实现简单的路由和filter
+## 先实现简单的路由和filter
+
 让我们找到并打开server/routes/Initialize.js,做一些小小的改动,添加两个路由,对应的就是我们未来的登录和注册功能
-```
+
+```javascript
 let loginRoutes = require('./actions/login')
 let registerRoutes = require('./actions/register')
 ```
+
 然后,再加上两个filter,sess是我们校验session的一个过滤器,auth顾名思义,就是身份验证
-```
+
+```javascript
 let sess = require('../filters/session')
 let auth = require('../filters/authentication')
 ```
+
 然后将它们添加到暴露的方法中
-```
+
+```javascript
 module.exports = function (app) {
 // 注意添加顺序要保持一致
 // ---begin---
@@ -49,8 +57,10 @@ module.exports = function (app) {
     app.use('/graphql', graphqlRoutes)
 }
 ```
+
 接下来,就是去实现这四个部分,先看server/filters/session.js的实现
-```
+
+```javascript
 module.exports = (req, res, next) => {
     if (!req.session) {
         return next(new Error('session missed.'))
@@ -58,9 +68,11 @@ module.exports = (req, res, next) => {
     next()
 }
 ```
+
 超级简单,验证一下请求里是否有session对象,没有的话,就哭.
-然后,我们顺道把server/filters/authentication.js也实现一个简单的版本
-```
+然后,我们顺道把 `server/filters/authentication.js` 也实现一个简单的版本
+
+```javascript
 module.exports = (req, res, next) => {
     if (req.session.user) {
         next()
@@ -69,11 +81,14 @@ module.exports = (req, res, next) => {
     }
 }
 ```
-okay,现在我们会校验一下请求中的session对象里有没有user,没有的话,就跳转到login.
-当然这只是先做一个简单的功能,暂且不考虑针对ajax请求所返回的数据形式.
-接下来的工作就是实现刚才定义的两个路由,/login和/register.
-server/routes/actions/login.js:
-```
+
+okay,现在我们会校验一下请求中的 session 对象里有没有 user,没有的话,就跳转到 login.
+当然这只是先做一个简单的功能,暂且不考虑针对 ajax 请求所返回的数据形式.
+接下来的工作就是实现刚才定义的两个路由 `/login` 和 `/register`.
+
+`server/routes/actions/login.js`
+
+```javascript
 let router = require('express').Router()
 router.get('/', (req, res) => {
     res.send({
@@ -83,8 +98,9 @@ router.get('/', (req, res) => {
 module.exports = router
 ```
 
-server/routes/actions/register.js
-```
+`server/routes/actions/register.js`
+
+```javascript
 let router = require('express').Router()
 router.get('/', (req, res) => {
     res.send({
@@ -93,25 +109,27 @@ router.get('/', (req, res) => {
 })
 module.exports = router
 ```
+
 ok,现在我们启动服务器`npm run debug`
-然后访问 http://localhost:8001/index 会发现我们已经被redirect到了login页面
+然后访问 `http://localhost:8001/index` 会发现我们已经被 redirect 到了 login 页面
 
 ![Paste_Image.png](http://upload-images.jianshu.io/upload_images/140939-c4dff4c56a0207b2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-好的,现在我们的服务器按照预想的对发送到/index的请求验证了用户身份信息,发现当前会话中没有user信息,所以给我们重定向到/login.
+好的,现在我们的服务器按照预想的对发送到 `/index` 的请求验证了用户身份信息,发现当前会话中没有 user 信息,所以给我们重定向到 `/login`.
 接下来,我们要实现web前端的部分,来完成一个用户的登录注册功能.
 
-#### 引入模板引擎,创建登录注册页
-首先,我们要在项目的根目录创建public和src目录
+### 引入模板引擎,创建登录注册页
+
+首先,我们要在项目的根目录创建 public 和 src 目录
+
 - public 用来放置我们服务器提供的一些前端资源
 - src 是我们前端开发的源码目录
-然后创建服务器端的视图文件夹目录
-- server/views 
+- `server/views` 服务器端的视图文件夹目录
 
-然后,我们进入到src目录,创建名为scripts的子目录,接着在其下创建一个entry.js,该文件作为我们前端打包时的入口文件.
-接下来我们需要安装jade模板引擎,`npm i --save jade`,然后在server.js中添加引擎
+然后,我们进入到 src 目录,创建名为 scripts 的子目录,接着在其下创建一个 `entry.js`,该文件作为我们前端打包时的入口文件.
+接下来我们需要安装 jade 模板引擎,`npm i --save jade`,然后在 `server.js` 中添加引擎
 
-```
+```javascript
 let path = require('path')
 
 app.set('views', path.join(__dirname, 'views'))
@@ -120,7 +138,8 @@ app.use(express.static(__dirname + '/../public'))
 ```
 
 好的,接下来我们先完成login页面的渲染,在这之前我们要给login的路由做些小的调整,打开server/routes/actions/login.js,将原本的route.get替换成
-```
+
+```javascript
 router.get('/', (req, res) => {
     let msg = req.session.error
     req.session.error = ''
@@ -130,10 +149,12 @@ router.get('/', (req, res) => {
     })
 })
 ```
-这样我们的服务器会在接收到/login的get请求时,去调用app指定的模板渲染引擎(也就是上文的`app.set('view engine','jade')`所指定的`jade`)去渲染对应的页'login'.
 
-下面,我们要去完成'login.jade'页面,创建文件`/server/views/login.jade`,
-```
+这样我们的服务器会在接收到 `/login` 的 get 请求时,去调用 app 指定的模板渲染引擎(也就是上文的 `app.set('view engine','jade')` 所指定的 `jade` )去渲染对应的页 `login`.
+
+下面,我们要去完成 `login.jade` 页面,创建文件 `/server/views/login.jade`,
+
+```jade
 doctype html
 html
   head
@@ -161,10 +182,14 @@ html
             .col-xs-6
               a.btn.btn-info.btn-block.btn-register(href='/register') 还没注册?
 ```
-好的,目前为止,我们已经可以在http://localhost:8001/login地址访问到这个挫的不行的登录页了.
 
-为了保证模板的通用性,我们可以把页面正文之外的部分抽出来,作为一个layout,那么我们需要做一些修改.首先创建`server/views/_layout.jade`
-```
+好的,目前为止,我们已经可以在 `http://localhost:8001/login` 地址访问到这个挫的不行的登录页了.
+
+为了保证模板的通用性,我们可以把页面正文之外的部分抽出来,作为一个layout,那么我们需要做一些修改.
+
+首先创建 `server/views/_layout.jade`
+
+```javascript
 doctype html
 html
   head
@@ -174,8 +199,9 @@ html
   block content
 ```
 
-然后,将我们刚才的`login.jade`调整为
-```
+然后,将我们刚才的 `login.jade` 调整为
+
+```jade
 extends _layout
 block content
   body.hold-transition.login-page
@@ -200,10 +226,12 @@ block content
               a.btn.btn-info.btn-block.btn-register(href='/register') 还没注册?
 
 ```
+
 okay,这样我们就可以在接下来专注到body部分的实现了,顺势把注册也完成吧
 
-register.js 路由
-``` 
+`register.js` 路由
+
+```javascript
 router.get('/', (req, res) => {
     let msg = req.session.error
     req.session.error = ''
@@ -214,8 +242,9 @@ router.get('/', (req, res) => {
 })
 ```
 
-register.jade
-``` 
+`register.jade`
+
+```jade
 extends _layout
 block content
   body.hold-transition.login-page
@@ -243,27 +272,28 @@ block content
               a.btn.btn-info.btn-block.btn-register(href='/login') 已有账号?
 
 ```
-目前为止,我们访问 http://localhost:8001/login
-以及 http://localhost:8001/register 就可以看到两个挫的不行的页面了.
+
+目前为止,我们访问 `http://localhost:8001/login`
+以及 `http://localhost:8001/register` 就可以看到两个挫的不行的页面了.
 
 由于我们身处在这个看脸的社会,所以我希望它们在实现功能之前,能更美观一些.
-让我们把
-`link(rel='stylesheet',href='//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css')`
-加到`_layout.jade`页面的head中,接下来再去访问login页面,就发现帅多了!
+让我们把 `link(rel='stylesheet',href='//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css')` 加到 `_layout.jade` 页面的 head 中,接下来再去访问 login 页面,就发现帅多了!
 
-#### 完成登录注册功能
+## 完成登录注册功能
 
 好的,上面我们完成了登录注册两个页面的基本视图,接下来就是实现真正意义上的功能.
 
-不过在这之前,按照惯例,我们要安装一些东西
-`npm i --save babel babel-core babel-plugin-transform-decorators-legacy`
-然后再创建一个文件`server/start.js`
-```
+不过在这之前,按照惯例,我们要安装一些东西 `npm i --save babel babel-core babel-plugin-transform-decorators-legacy`
+然后再创建一个文件 `server/start.js`
+
+```javascript
 require('babel-core/register')
 require('./server')
 ```
-接下来到package.json中做些修改:
-```
+
+接下来到 `package.json` 中做些修改:
+
+```javascript
   "scripts": {
     "debug": "set NODE_ENV=DEV & nodemon server/start.js"
   },
@@ -273,13 +303,17 @@ require('./server')
     ]
   }
 ```
-okay,这样我们nodejs的服务器环境就可以支持es7的`decorator`了.
+
+okay,这样我们nodejs的服务器环境就可以支持es7的 `decorator` 了.
+
 > 为什么要折腾这个?
-我们的服务器要支持PC端和移动端的访问,而且将来使用`react-native`去做移动端的时候,通信方式也是基于`fetch`这个api,即`http`通信方式.所以我们现在在做一些通用的`post action`时,就要要考虑如何能够实现多端支持.而一个我这智商能够想到的,较为优雅的,却在观众老爷们看来可能很蹩脚的解决方案就是面向切面的设计,或者说是拦截器/修饰符/decorator/AOP,你想怎么叫都行,whatever u like...
+
+我们的服务器要支持 PC 端和移动端的访问,而且将来使用 `react-native` 去做移动端的时候,通信方式也是基于 `fetch` 这个 api,即 `http` 通信方式.所以我们现在在做一些通用的 `post action` 时,就要要考虑如何能够实现多端支持.而一个我这智商能够想到的,较为优雅的,却在观众老爷们看来可能很蹩脚的解决方案就是面向切面的设计,或者说是拦截器/修饰符/decorator/AOP, 你想怎么叫都行, whatever u like...
 
 好的,接下来,新建2个文件
-server/dispatch/response.js
-```
+`server/dispatch/response.js`
+
+```javascript
 let logger = require('../../framework/logger/Logger')
 
 const IS_FROM_MOBILE = function(req) {
@@ -339,9 +373,11 @@ module.exports = {
     ActionResult: ActionResult
 }
 ```
+
 还有一个日志记录
-framework/logger/logger.js
-```
+`framework/logger/logger.js`
+
+```javascript
 class DevLogger {
     info(msg) {
         console.log(`${new Date().toLocaleString()} - ${msg}`)
@@ -365,12 +401,13 @@ let logger = process.env.NODE_ENV == 'DEV' ? new DevLogger() : new ProdLogger()
 module.exports = logger
 ```
 
-好的,准备工作完成了,下面让我们把目光放回到`server/routes/actions`目录中.
+好的,准备工作完成了,下面让我们把目光放回到 `server/routes/actions` 目录中.
 
-> 这里说是路由,不如说是路由映射及controller的实现,如果读者觉得头晕目眩恶心反胃,不妨把routes/actions和routes/graphql里的controller部分抽离到server目录下.
+> 这里说是路由,不如说是路由映射及 controller 的实现,如果读者觉得头晕目眩恶心反胃,不妨把 routes/actions 和 routes/graphql 里的 controller 部分抽离到 server 目录下.
 
-server/routes/actions/login.js修改如下
-```
+`server/routes/actions/login.js` 修改如下
+
+```javascript
 let router = require('express').Router()
 let bodyParser = require('body-parser')
 let urlencodedParser = bodyParser.urlencoded({ extended: false })
@@ -398,4 +435,5 @@ router.post('/', urlencodedParser, _controller._post)
 
 module.exports = router
 ```
+
 (未完待续...)
