--- a/source/_draft/jsFullStackSeries/02.md
+++ b/source/_draft/jsFullStackSeries/02.md
@@ -4,7 +4,7 @@ date: 2016-09-27 18:26:00
 tags: javascript 全栈
 ---
 
-# 软件环境
+## 软件环境
 
 首先,需要安装一些必要的软件
 
@@ -27,22 +27,24 @@ tags: javascript 全栈
 
 <!--more-->
 
-# 来吧,Server!
+## 来吧,Server
 
  创建一个空的文件夹 MyServer
 `cd myserver & npm init` 
 一路回车之后,再安装几个依赖
 `npm i --save express express-session express-graphql graphql redis connect-redis mongoose nodemon body-parser properties-reader`
 
-**然后你可以先去睡几个小时,装完之后让你女朋友叫醒你**
+然后你可以先去睡几个小时,装完之后让你**女朋友**叫醒你
 
 哈哈哈,我开玩笑的
-... 
+...
 ..
 .
+
 程序员**怎么可能**有女朋友!!! (╯‵□′)╯︵┻━┻
 
 装完之后,我们就可以规划一个比较合理的目录了,这次我们只打算做服务器端的部分,所以我们创建三个目录:`mkdir server framework core`
+
 - framework 业务无关的公共的组件 譬如加密等
 - core 业务相关的公共组件  譬如数据模型等
 - server 服务器文件 譬如路由 各种及filter等
@@ -50,7 +52,8 @@ tags: javascript 全栈
 接下来,我们在进入server目录创建server.js:`cd server & touch server.js` (cmd下的指令是`cd server & cd .>server.js` 下文将不再赘述)
 
 OK,现在我们在编辑器中打开server.js
-```
+
+```javascript
 let propReader = require('properties-reader')('server.properties')
 let express = require('express')
 let app = express()
@@ -78,7 +81,8 @@ server.listen(PORT, () => {
 接下来,我们去实现这两个模块.
 
 进入到framework目录,创建redis目录,进入之后创建session.js
-```
+
+```javascript
 let session = require('express-session')
 let RedisStore = require('connect-redis')(session)
 let client = require('./base')
@@ -94,8 +98,10 @@ module.exports = session({
   saveUninitialized: false
 })
 ```
+
 接着,在本目录创建 base.js
-```
+
+```javascript
 let redis = require('redis')
 let propReader = require('properties-reader')('server.properties')
 let client = redis.createClient(propReader.get('redisServer.port'), propReader.get('redisServer.ip'), {})
@@ -113,8 +119,10 @@ client
 
 module.exports = client
 ```
+
 恩,这里我们把配置写到了一个配置文件里,接下来让我们回到根目录,创建配置文件server.properties
-```
+
+```javascript
 # server 服务器配置
 server.port=8001
 # dbServer 数据库服务器配置
@@ -127,8 +135,9 @@ redisServer.ip=localhost
 redisServer.port=6379
 ```
 
-好的,接下来我们要再回到server目录,创建routes文件夹,在下面创建一个叫做Initialize.js的文件,在这里我们要返回一个初始化路由的方法
-```
+  好的,接下来我们要再回到server目录,创建routes文件夹,在下面创建一个叫做Initialize.js的文件,在这里我们要返回一个初始化路由的方法
+
+```javascript
 let indexRoutes = require('./actions/index')
 let graphqlRoutes = require('./graphql/index')
 
@@ -137,21 +146,25 @@ module.exports = function (app) {
     app.use('/graphql', graphqlRoutes)
 }
 ```
+
 我们在Initialize里注册两个路由,一个是/index,另外一个是/graphql.
 其中的index我们先将其创建在server/routes/actions目录中,命名为index.js,简单实现一下:
-```
+
+```javascript
 let router = require('express').Router()
 
 router.get(['/', '/index'], (req, res) => {
-	res.send({
-		title: '来啊,互相伤害啊!',
-	})
+  res.send({
+    title: '来啊,互相伤害啊!',
+  })
 })
 
 module.exports = router
 ```
+
 接下来需要实现graphql/index.js,但是在这之前,我们要先构建一个用户模型,也就是一个Schema.我们进入core目录创建schemas文件夹,在下面创建user.js
-```
+
+```javascript
 module.exports = function (mongoose) {
     return mongoose.Schema({
         username: {
@@ -207,8 +220,10 @@ module.exports = function (mongoose) {
     })
 }
 ```
+
 然后我们在core的根目录里添加一个models.js
-```
+
+```javascript
 const mongoose = require('mongoose')
 mongoose.Promise = global.Promise
 const propReader = require('properties-reader')('server.properties')
@@ -240,8 +255,10 @@ SCHEMAS.forEach(function (key) {
 
 module.exports = schemaMapper
 ```
+
 好的,下面我们就可以回到刚才的server/routes/里创建graphql目录,然后在里面创建index.js:
-```
+
+```javascript
 let UserModel = require('../../../core/models').user()  // 获取刚才的用户模型的数据库连接
 let {
     GraphQLSchema,
@@ -349,26 +366,25 @@ let graphqlRoutes = require('express-graphql')(req => ({
 
 module.exports = graphqlRoutes
 ```
+
 目前为止,我们已经创建了一个简单的服务器,目录结构是这样的
 
-
 ![tree.jpg](http://upload-images.jianshu.io/upload_images/140939-afe64974745a40d9.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
-
 
 虽然很多细节并不完善,但是总要一步一步来.
 
 下面让我们在package.json里的scripts下添加一个debug指令
-```
+
+```javascript
   "debug":"nodemon server/server.js"
 ```
-保存后,在项目根目录打开控制台 输入`npm run debug` (确保你的mongodb和redis服务都已经开启)就会看到控制台的输出 服务器已经运行
 
+保存后,在项目根目录打开控制台 输入`npm run debug` (确保你的mongodb和redis服务都已经开启)就会看到控制台的输出 服务器已经运行
 
 接下来在浏览器访问http://localhost:8001
 
 ![Paste_Image.png](http://upload-images.jianshu.io/upload_images/140939-5180874a327e2db8.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
- 也可以访问 http://localhost:8001/graphql 查看graphql调试器 
+ 也可以访问 `http://localhost:8001/graphql` 查看graphql调试器
 
 我们现在还没有用户数据,所以请求到的结果是空,下一章[我们将逐步完善服务器端功能,并且开始构建我们的web端之旅](http://www.jianshu.com/p/ccd3f3cdc5b4)
