--- a/source/_posts/踩过的坑.md
+++ b/source/_posts/踩过的坑.md
@@ -4,15 +4,15 @@ date: 2016-9-28 12:57:29
 tags: 踩坑
 ---
 
-# 浏览器
+## 浏览器
 
-## IE 系列
+### IE 系列
 
 - IE11在跨站引用的样式文件中的url(比如字体文件路径)解析时,会将document文档的域作为当前域,而不是该样式文件的域.
 - 在IE8中使用respond.js去使之支持css3媒体查询的时候,值得注意的是**respond默认不会加载跨域样式资源**,
 - 在IE8中实现数据可视化,千万不要用基于canvas绘图的插件+excanvas,这是自寻死路.还是找找svg+vml绘图的插件吧,比如highcharts之类的.效率问题.
 
-## Ajax/CORS
+### Ajax/CORS
 
 - XMLHttpRequest的`setRequestHeader`要在`open`后进行
 - 在跨域的POST请求,需要携带cookie身份信息时,XMLHttpRequest的`withCredentials`要在`open`后,设置为`true`(对应的,服务器要有`Access-Control-Allow-Credentials: true`的responseHeader)
@@ -21,25 +21,25 @@ tags: 踩坑
 
 <!--more-->
 
-## IOS 微信X5
+### IOS 微信X5
 
 - 不支持canvas.resetTransform()
 - 不支持Array.fill
 - 不支持Array.findIndex
 
-## Android 微信X5
+### Android 微信X5
 
 - 不支持字符串模板
 
-# NODEJS
+## NODEJS
 
-## node_amqp 类库心跳默认没有开启
+### node_amqp 类库心跳默认没有开启
 
 在使用 node_amqp 类库时连接 rabbitMQ 的连接如果没有正确断开则会使 rabbitMQ 服务中的 connection 越来越多，原因就是因为 `heartbeat` 默认值是 `false`，而这个属性没有在默认的配置中出现，而且没有在文档的配置说明中进行阐述，只是在一个非常不显眼的角落里顺带提了一句:
 
 > The heartbeat setting sets the heartbeat interval (in seconds) for the connection. There is no default for this option meaning no heartbeating is taking place.
 
-## MSBuild Error MSB4132 错误
+### MSBuild Error MSB4132 错误
 
 该错误是由于node-gyp默认使用2.0版本的msbuild,可能和当前机器上的msbuild版本不一致导致的.
 
@@ -53,7 +53,7 @@ tags: 踩坑
 	- 或者在npm的 rebuild|install 某些需要编译的包时加上msvs_version的指定设置 `npm install <module> --msvs_version=xxxx`
 - 重装node-gyp
 
-## MSBuild Error MSB4019 错误
+### MSBuild Error MSB4019 错误
 
 这个错误是由于node-gyp在build一些项目,没有找到系统配置的microsoft.cpp.default.props文件位置导致的
 
@@ -73,7 +73,7 @@ tags: 踩坑
 - 确认安装之后,在系统环境变量中为当前用户(或者所有用户，自行斟酌)的PATH配置中添加VCBuild.exe的绝对路径
 </strike>
 
-## Babel-Gulp使用[Symbol.iterator]时编译出现错误 
+### Babel-Gulp使用[Symbol.iterator]时编译出现错误 
 
 > npm install babel-plugin-transform-runtime
 
@@ -106,9 +106,9 @@ tags: 踩坑
 
 	尚未有什么好的解决方法,估计是其自身的问题,babel-gulp的repo里也有对应的[ISSUE](https://github.com/babel/gulp-babel/issues/50 "Cannot find module 'babel-runtime/regenerator'")
 
-# ELM
+## ELM
 
-## windows环境下 elm-package install/elm-make 出现错误permission denied
+### windows环境下 elm-package install/elm-make 出现错误permission denied
 
 	elm-make: elm-lang-core-5204441: MoveFileEx "elm-lang-core-5204441" "2.1.0": permission denied (Access is denied.)
 
@@ -116,15 +116,15 @@ tags: 踩坑
 分析错误,发现是elm包管理器在下载pkg之后需要创建一个版本号然后将对应的文件移动到其目录下,这个动作在windows平台上有安全问题,所以操作失败.  
 临时解决方法是手动移动`elm-lang-core-5204441`文件夹到`elm-stuff/packages/elm-lang/core/`目录下,重命名目录名称为`2.1.0`
 
-# REACT-NATIVE
+## REACT-NATIVE
 
-## windows环境下 android开发 
+### windows环境下 android开发 
 
 	- socket.io 出现引用错误,初步估计是因为socket.io和react-native都是用webpack打包,所以查找引用目录出现了问题,
 	于是将socket.io.js(打包后的文件)作为一个单独模块添加到项目里,
 	然后报了一些navigator的错误(因为根据浏览器的userAgent判断环境),无脑的去掉这些地方就能用了
 
-## ios 环境下添加 react-native-vector-icons 引用
+### ios 环境下添加 react-native-vector-icons 引用
 
   - XCode 中添加 RNVectorIcons.xcodeproj 到 Libraries
 	- Build Phases 中添加 libRNVectorIcons 到 Link Binary With Libraries
@@ -140,28 +140,26 @@ tags: 踩坑
 
 	还有一种方法没有试过，执行命令：`ulimit 4096 # for instance`
 
-# NGINX
+## NGINX
 
-	nginx 在代理同一个服务器上的多个 nodejs 实例时，当 nodejs 中有使用了 socket.io ，就会出现不断 connect 的问题，这是因为 nginx 在代理时没有把套接字链接视作一个长链接导致的，配置 upsteam 的 keepalive 之后便可以解决该问题。
+nginx 在代理同一个服务器上的多个 nodejs 实例时，当 nodejs 中有使用了 socket.io ，就会出现不断 connect 的问题，这是因为 nginx 在代理时没有把套接字链接视作一个长链接导致的，配置 upsteam 的 keepalive 之后便可以解决该问题。
 
-```json
+```yml
+upstream upstream_host {
+	server 127.0.0.1:8090;
+	keepalive 64;
+}
 
-		upstream upstream_host {
-			server 127.0.0.1:8090;
-			keepalive 64;
-		}
-
-		location ^~ /socket {
-				proxy_pass https://upstream_host;
-				proxy_http_version 1.1;
-				proxy_set_header Upgrade $http_upgrade;
-				proxy_set_header Connection "upgrade";
-				proxy_set_header Host $host;
-		}
-
+location ^~ /socket {
+	proxy_pass https://upstream_host;
+	proxy_http_version 1.1;
+	proxy_set_header Upgrade $http_upgrade;
+	proxy_set_header Connection "upgrade";
+	proxy_set_header Host $host;
+}
 ```
 
-# DEBIAN
+## DEBIAN
 
 使用 puppeteer 时会报依赖错误，普通用户只需要安装依赖即可解决
 
